Filler text is replaced by real content, all informations entered is up-to-date

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 
 
 <body>
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div class="loader"></div>
     <div id="text-container">
       <p class="preloader-text preloader-text-desktop">Hey there !!! Welcome to Surojit Mondal's site</p>
       <p class="preloader-text preloader-text-mobile">Hey Welcome !!!</p>
       <p id="caret">|</p>
     </div>
-  </div>
+  </div> -->
 
   <div id="cursor"></div>
 
@@ -244,8 +244,8 @@ ________________________________________________________________________________
             <!-- <iframe class="laptop-iframe" src="https://mondalsurojit.github.io/Casio-fx-991ES_Plus/index.html" title="Casio-fx-991ES_Plus"></iframe> -->
           </div>
           <div id="app-tray">
-            <div class="laptop-icons" id="project-1" title="Tic-Tac-Toe"></div>
-            <div class="laptop-icons" id="project-2" title="Net-Speed"></div>
+            <div class="laptop-icons" id="project-1" title="Net-Speed"></div>
+            <div class="laptop-icons" id="project-2" title="Tic-Tac-Toe"></div>
             <div class="laptop-icons" id="project-3" title="Casio-fx-991ES_Plus"></div>
             <div class="laptop-icons" id="project-4" title="Stock-Bot"></div>
           </div>
@@ -365,14 +365,14 @@ ________________________________________________________________________________
             </p>
           </div>
           <div id="company-jobdetails-wrapper">
-            <p class="company-jobdetails">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos
-              voluptates. Quisquam, quos voluptates.</p>
-            <p class="company-jobdetails">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos
-              voluptates. Quisquam, quos voluptates.</p>
+            <p class="company-jobdetails">*Developed the updated User-Interface of the official GDSC
+              website<br>*Implemented features like lazy-loading and infinite-scrolling</p>
+            <p class="company-jobdetails">*Conducted web-dev seminar at the university level, which was attended by
+              close to 100 students<br>*Gained experience of Team-Work and Public-Speaking</p>
             <p class="company-jobdetails">*Guided and interacted with innumerous people visiting the Tech-Fest, being a
               member of the help desk support.<br>*Gained experience of Team-Work and Event-Management.</p>
-            <p class="company-jobdetails">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos
-              voluptates. Quisquam, quos voluptates.</p>
+            <p class="company-jobdetails">*Joined as a regular member, but later got promoted to a Web-Development team
+              member</p>
           </div>
         </div>
       </div>
@@ -392,25 +392,25 @@ ________________________________________________________________________________
       <div tabindex="0" class="ed-card ed-card1">
         <div class="ed-img ed-img1"></div>
         <h3 class="ed-heading">ICSE</h3>
-        <article class="ed-article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, officiis autem
-          quae blanditiis molestias voluptate. Placeat officia molestiae impedit dolorem culpa error ipsa
-          repellendus voluptas.
-        </article>
+        <article class="ed-article">I did my matriculation from St. Xavier's Institution, Panihati scoring 93.76%. Other
+          than academics, I was actively involved in Yoga & also became the runner-up of CISCE Interschool Yoga
+          Championship (U-17) 2018</article>
       </div>
 
       <div tabindex="0" class="ed-card ed-card2">
         <div class="ed-img ed-img2"></div>
         <h3 class="ed-heading">ISC</h3>
-        <article class="ed-article">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi assumenda qui
-          asperiores iure voluptatibus aspernatur itaque, dignissimos eligendi et. In omnis sapiente suscipit
-          incidunt expedita!</article>
+        <article class="ed-article">I pursued my intermediate education in Science department from the same school and
+          was one of the most active student in the entire batch. I scored 89.25% in ISC and was from the best section
+          of my school.</article>
       </div>
 
       <div tabindex="0" class="ed-card ed-card3">
         <div class="ed-img ed-img3"></div>
         <h3 class="ed-heading">BTECH</h3>
-        <article class="ed-article">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum, distinctio! Sunt
-          abdicta, ratione iure, modi natus quos nemo, autem facilis ipsum nobis soluta ducimus!</article>
+        <article class="ed-article">Having cleared my JEE Mains, I got enrolled in the BTech 4 years program in the IT
+          department of Institute of Technology, Guru Ghasidas University. Presently, I am in my 2nd year with a 7.45
+          CGPA.</article>
       </div>
       </div>
       <div class="swiper-pagination"></div>
@@ -425,25 +425,25 @@ ________________________________________________________________________________
           <div class="swiper-slide slide2" id="ed-card1">
             <div class="ed-img ed-img1"></div>
             <h3 class="ed-heading">ICSE</h3>
-            <article class="ed-article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, officiis autem
-              quae blanditiis molestias voluptate. Placeat officia molestiae impedit dolorem culpa error ipsa
-              repellendus voluptas.
-            </article>
+            <article class="ed-article">I did my matriculation from St. Xavier's Institution, Panihati scoring 93.76%.
+              Other than academics, I was actively involved in Yoga & also became the runner-up of CISCE Interschool
+              Yoga Championship (U-17) 2018</article>
           </div>
 
           <div class="swiper-slide slide2" id="ed-card2">
             <div class="ed-img ed-img2"></div>
             <h3 class="ed-heading">ISC</h3>
-            <article class="ed-article">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi assumenda qui
-              asperiores iure voluptatibus aspernatur itaque, dignissimos eligendi et. In omnis sapiente suscipit
-              incidunt expedita!</article>
+            <article class="ed-article">I pursued my intermediate education in Science department from the same school
+              & was one of the most active student in the entire batch. I scored 89.25% in ISC & was from the best
+              section of my school.</article>
           </div>
 
           <div class="swiper-slide slide2" id="ed-card3">
             <div class="ed-img ed-img3"></div>
             <h3 class="ed-heading">BTECH</h3>
-            <article class="ed-article">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum, distinctio! Sunt
-              abdicta, ratione iure, modi natus quos nemo, autem facilis ipsum nobis soluta ducimus!</article>
+            <article class="ed-article">Having cleared my JEE Mains, I got enrolled in the BTech 4 years program in the
+              IT-department of Institute of Technology, Guru Ghasidas University. Presently, I am in my 2nd year with a
+              7.45 CGPA.</article>
           </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -528,6 +528,9 @@ ________________________________________________________________________________
               <li title="Figma">
                 <figure id="tool-4"></figure>
               </li>
+              <li title="Postman">
+                <figure id="tool-5"></figure>
+              </li>
             </ul>
           </div>
 
@@ -579,17 +582,16 @@ ________________________________________________________________________________
     <section id="contact">
       <h2 class="section-heading">Contact Me</h2>
       <div id="why-hire-me">
-        <p id="short-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nemo voluptas illo voluptate
-          molestias earum vel. Aperiam repellendus accusantium corporis neque, voluptate expedita. Ducimus, quia iste.
-          Enim assumenda expedita distinctio.</p>
+        <p id="short-info">After going through all my projects & skill-sets, I am sure you have got enough reasons to
+          hire me. As a developer, I don't completely know anything, you see I am not very good at memorizing, I
+          normally read documentations everytime I am building something, but I make sure to get the work done in time.
+        </p>
         <div id="github-details">
           <p class="github-data" id="github-commits"></p>
           <p class="github-data" id="github-followers"></p>
           <p class="github-data" id="github-repos"></p>
         </div>
         <p id="short-info2">Book a 30-min private event with me.</p>
-        <!-- <a href="https://calendly.com/mondalsurojit/private-online-meet" target="_blank"><button class="big-button"
-            id="schedule-event-button">SCHEDULE EVENT</button></a> -->
         <a href="" onclick="Calendly.initPopupWidget({
             url: 'https://calendly.com/mondalsurojit/private-online-meet'});
             return false;"><button class="big-button" id="schedule-event-button">SCHEDULE EVENT</button></a>
@@ -612,10 +614,6 @@ ________________________________________________________________________________
         </form>
       </div>
 
-      <!-- <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSfoqIPn6fy7Osy5CtHvAdO8LymRxCp29YbW0TbQBSLjWlHDNg/viewform?embedded=true"
-        width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0"
-        title="Contact Form">Loading…</iframe> -->
     </section>
 
 
