--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 
 
 <body>
-  <!-- <div id="preloader">
+  <div id="preloader">
     <div class="loader"></div>
     <div id="text-container">
       <p class="preloader-text preloader-text-desktop">Hey there !!! Welcome to Surojit Mondal's site</p>
       <p class="preloader-text preloader-text-mobile">Hey Welcome !!!</p>
       <p id="caret">|</p>
     </div>
-  </div> -->
+  </div>
 
   <div id="cursor"></div>
 
