few images updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="loader"></div>
     <div id="text-container">
       <p class="preloader-text preloader-text-desktop">Hey there !!! Welcome to Surojit Mondal's site</p>
-      <p class="preloader-text preloader-text-mobile">Hey Welcome !!!</p>
+      <p class="preloader-text preloader-text-mobile">Hey Welcome!!</p>
       <p id="caret">|</p>
     </div>
   </div>
@@ -81,7 +81,7 @@ ________________________________________________________________________________
 
   <header>
     <a href="#home" title="Home">
-      <h1>SM</h1>
+      <h1>›SMˍ</h1>
     </a>
     <ul class="nav">
       <li>
